Systemd role, with a timer to run insights compliance scan

--- a/rhelconfigure.yml
+++ b/rhelconfigure.yml
@@ -16,6 +16,7 @@
     - vars/cockpit.yml
     - vars/metrics.yml
     - vars/fapolicyd.yml
+    - vars/systemd.yml
 
   vars:
   # Explicitly telling Ansible to use Python3, because of the bug below:
@@ -91,6 +92,12 @@
         name: fedora.linux_system_roles.fapolicyd
       tags:
         - fapolicyd
+
+    - name: Run the Systemd role
+      ansible.builtin.include_role:
+        name: fedora.linux_system_roles.systemd
+      tags:
+        - systemd
 
     - name: Install some useful packages
       ansible.builtin.yum:
