--- a/rhelconfigure.yml
+++ b/rhelconfigure.yml
@@ -100,6 +100,7 @@
         - ansible_distribution_major_version|int >= 8
       tags:
         - fapolicyd
+        - never # Because it makes the system too slow
 
     - name: Run the Tlog role (RHEL 8+ only)
       ansible.builtin.include_role:
