--- a/group_vars/all/ssg_versions.yml
+++ b/group_vars/all/ssg_versions.yml
@@ -21,3 +21,4 @@ scap_security_guide_package:
   "9.3": "scap-security-guide-0.1.72-1.el9_3.noarch"
   "9.4": "scap-security-guide-0.1.73-1.el9_4.noarch"
   "9.5": "scap-security-guide-0.1.74-1.el9_4.noarch"
+  "9.5": "scap-security-guide-0.1.75-1.el9.noarch"
