--- a/rhelconfigure_els.yml
+++ b/rhelconfigure_els.yml
@@ -3,7 +3,7 @@
 #
 - name: Register RHEL VMs and install Insights/related
 
-  hosts: azureels
+  hosts: "{{ vm_fqdn | default('all') }}"
 
   gather_facts: true
   become: true
