--- a/group_vars/all/ssg_versions.yml
+++ b/group_vars/all/ssg_versions.yml
@@ -21,4 +21,5 @@ scap_security_guide_package:
   "9.3": "scap-security-guide-0.1.72-1.el9_3.noarch"
   "9.4": "scap-security-guide-0.1.73-1.el9_4.noarch"
   "9.5": "scap-security-guide-0.1.75-1.el9.noarch"
+  "9.6": "scap-security-guide-0.1.76-1.el9.noarch"
   "10.0": "scap-security-guide-0.1.76-2.el10.noarch"
